src/test/ui/type/type-recursive-box-shadowed.stderr
error[E0072]: recursive type `Foo` has infinite size
  --> $DIR/type-recursive-box-shadowed.rs:7:1
   |
LL | struct Foo {
   | ^^^^^^^^^^ recursive type has infinite size
LL |
LL |     inner: Foo,
   |            --- recursive without indirection
   |
help: insert some indirection (e.g., a `Box`, `Rc`, or `&`) to make `Foo` representable
   |
LL |     inner: Box<Foo>,
   |            ++++   +

error: aborting due to previous error

For more information about this error, try `rustc --explain E0072`.
